<resources>
    <string name="app_name">FavoritePet</string>
    <string name="msg_title">start select?</string>
    <string name="check_lbl">start</string>
    <string name="msg_quest">what favorite member?</string>
    <string name="mem_rapmon">rapmonster</string>
    <string name="mem_jin">jin</string>
    <string name="mem_suga">suga</string>
    <string name="mem_hope">j-hope</string>
    <string name="mem_jimin">jimin</string>
    <string name="mem_V">V</string>
    <string name="mem_kook">jungkook</string>
    <string name="but_lbl">select complete</string>
</resources>
