<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="yeseul.kr.hs.emirim.favoritepet.MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msg_title"
        android:textSize="20sp"
        />

    <CheckBox
        android:id="@+id/check_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_lbl"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msg_quest"
        android:textSize="20sp"
        android:visibility="invisible"
        />

    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        >
        <RadioButton
            android:id="@+id/radio_rapmon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mem_rapmon"
            />
        <RadioButton
            android:id="@+id/radio_jin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mem_jin"
            />
        <RadioButton
            android:id="@+id/radio_suga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mem_suga"
            />
        <RadioButton
            android:id="@+id/radio_hope"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mem_hope"
            />
        <RadioButton
            android:id="@+id/radio_jimin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mem_jimin"
            />
        <RadioButton
            android:id="@+id/radio_V"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mem_V"
            />
        <RadioButton
            android:id="@+id/radio_kook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mem_kook"
            />
    </RadioGroup>

    <Button
        android:id="@+id/but_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/but_lbl"
        android:visibility="invisible"
        />
    <ImageView
        android:id="@+id/imgv_mem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/rapmonster"
        android:visibility="invisible"
        />

</LinearLayout>
